# medrag-benchmark

./: .env.example  .gitignore  README.md  pyproject.toml
results/csv/: benchmark_N1000.csv  benchmark_N10000.csv  benchmark_N100000.csv  benchmark_N1000000.csv
scripts/: build_index.py  download_dataset.py  run_benchmark.py
src/rag_benchmark/: __init__.py
src/rag_benchmark/adapters/: __init__.py  base.py
src/rag_benchmark/adapters/embedding/: base.py  sentence_transformer_adapter.py
src/rag_benchmark/adapters/llm/: base.py  openai_adapter.py
src/rag_benchmark/adapters/reranker/: __init__.py  base.py  cross_encoder_adapter.py
src/rag_benchmark/benchmark/: __init__.py  metrics.py  multi_gpu_runner.py  params.py  reporter.py  runner.py
src/rag_benchmark/config/: settings.py
src/rag_benchmark/data/: __init__.py  dataset_loader.py
src/rag_benchmark/indexing/: __init__.py  flat_index.py  hnsw_index.py  ivf_index.py  ivfpq_index.py
src/rag_benchmark/models/: document.py  query.py  result.py
src/rag_benchmark/modules/: __init__.py  ann_search.py  llm_generator.py  metadata_filter.py  query_rewriter.py  reranker.py
src/rag_benchmark/pipeline/: __init__.py  rag_pipeline.py
tmp/: Computing ground truth (Flat)..._Auto params_ nlis.md  RAG_BENCHMARK_PLAN.md  Sử dụng bộ benchmark theo link sau_ [https___huggi.md  Tôi muốn chạy với máy có cấu hình 2xA100 80GB(tota.md  config-param-follow-N.md  faiss.md  fix-faiss-gpu.md  llm.md  nlist.md  pipeline.md  preprocess-data-1M.md  pyproject.md  report-form.md  run.md  tại sao chạy 1M row lại lâu thế, tôi chạy phải hơn.md
