[project]
name = "rag-benchmark"
version = "0.1.0"
description = "RAG VectorDB Benchmark — MedRAG/Wikipedia"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]

dependencies = [
    "torch==2.8.0",
    "torchvision==0.23.0",
    "faiss-gpu-cu12>=1.8.0",
    "sentence-transformers>=3.0.0",
    "transformers==4.57.1",
    "accelerate==1.6.0",
    "datasets>=3.0.0",
    "huggingface-hub>=0.36.0",
    "openai>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.22.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "kaleido==0.2.1",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "ipykernel>=6.29.0",
    "jupyterlab>=4.2.0",
]

[project.scripts]
download-dataset = "scripts.download_dataset:main"
build-index = "scripts.build_index:main"
run-benchmark = "scripts.run_benchmark:main"

[tool.uv]
# package = false

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }


[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_benchmark"]
